fixes font size overflow issue on post pages

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -98,7 +98,7 @@
              bottom: 1rem;
              left: 1rem;
               @include media($mobile) {
-                  font-size: 6vw;       
+                  font-size: 6vh;
               }
          text-shadow: 3px 3px 8px #000;
          width: 60%;
@@ -107,7 +107,7 @@
  }
 
  .post-title {
-     font-size: 6vw;
+     font-size: 6vh;
      line-height: 1;
  }
 
